examples/test/testpolicy15553.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15553
  namespace: namespace351
spec:
  podSelector:
    matchLabels:
      key48: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value25
      podSelector:
        matchLabels:
          key30: value33
          key26: value45
          key46: value44
